[package]
name = "platform"
version = "0.1.0"
authors = ["Optiprism <dev@optiprism.io>"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
storage = { path = "../storage" }
anyhow = "1.0.66"
argon2 = "0.5.0"
arrow = { version = "52.0.0" }
axum = { version = "0.7.4", features = ["macros"] }
axum-core = "0.4.3"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
axum-macros = { version = "0.4.1" }
bytes = "1.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
common = { path = "../common" }
convert_case = "0.6.0"
datafusion = {  version = "39.0.0" }
datafusion-common = {  version = "39.0.0" }
hyper = "1.1.0"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
metadata = { path = "../metadata" }
num-traits = "0.2.15"
password-hash = { version = "0.5.0", features = ["std"] }
query = { path = "../query" }
rand = "0.8.5"
regex = "1"
reqwest = { version = "0.11.24", features = ["json", "cookies"] }
rust_decimal = { version = "1.27.0", features = ["serde-with-float"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.0.0"
thiserror = "1.0.37"
time = "0.3.36"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = { version = "0.10.0", features = ["axum-core"] }
tower-http = { version = "0.5.1", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
url = "2.3.1"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
zxcvbn = "2.2.1"

[dev-dependencies]
#criterion = "0.3.5"

# [[bench]]
# name = "count"
# harness = false

#[[bench]]
#name = "dictionary"
#harness = false
