[package]
name = "query"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
ahash = { version = "0.8", default-features = false }
arrow = { version = "38.0.0", features = ["prettyprint"] }
async-trait = "0.1.59"
axum = { version = "0.6.1", features = ["headers"] }
chrono = "0.4.23"
chronoutil = "0.2.3"
common = { path = "../common" }
datafusion = "24.0.0"
datafusion-common = "24.0.0"
datafusion-expr = "24.0.0"
fnv = "1.0.7"
futures = "0.3.25"
metadata = { path = "../metadata" }
object_store = "0.5.2"
rust_decimal = { version = "1.27.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.27"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tracing = "0.1.37"
tracing-test = "0.2.3"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
#criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.5"
