[package]
name = "query"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
num-traits = { version = "0.2.15", features = ["i128"] }
num = "0.4.0"
paste = "1.0.12"
dyn-clone = "1.0.11"
lazy_static = "1.4.0"
anyhow = "1.0.66"
ahash = { version = "0.8", default-features = false }
arrow = { version = "42.0.0", features = ["prettyprint"] }
arrow-row = "42.0.0"
async-trait = "0.1.59"
axum = { version = "0.6.1", features = ["headers"] }
chrono = "0.4.23"
chronoutil = "0.2.3"
common = { path = "../common" }
datafusion = "27.0.0"
datafusion-common = "27.0.0"
datafusion-expr = "27.0.0"
fnv = "1.0.7"
arrow2 = { git = "ssh://git@github.com/optiprism-io/arrow2.git", features = ["compute_arithmetics", "compute_merge_sort", "compute_concatenate"] }
futures = "0.3.25"
metadata = { path = "../metadata" }
object_store = "0.6.1"
store = { path = "../store" }
rust_decimal = { version = "1.27.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.27"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
nohash-hasher = "0.2.0"
tracing = "0.1.37"
tracing-subscriber = "0.3"
tracing-core = "0.1.30"
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
#criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.5"
