[package]
name = "query"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[dependencies]
metrics-util = "0.16.0"
metrics = "0.22.0"
ahash = { version = "0.8.8", default-features = false }
anyhow = "1.0.66"
arrow = { version = "49.0.0", features = ["prettyprint"] }
arrow-row = "49.0.0"
arrow2 = { git = "ssh://git@github.com/optiprism-io/arrow2.git", features = ["compute_arithmetics", "compute_merge_sort", "compute_concatenate"] }
async-trait = "0.1.59"
axum = { version = "0.7.4" }
chrono = "0.4.23"
chronoutil = "0.2.3"
common = { path = "../common" }
crossbeam = "0.8.2"
datafusion = "34.0.0"
datafusion-common = "34.0.0"
datafusion-expr = "34.0.0"
display_json = "0.2.1"
dyn-clone = "1.0.11"
fnv = "1.0.7"
futures = "0.3.25"
#hyperlog_simd = "0.2.0"
hyperloglog = "1.0.2"
lazy_static = "1.4.0"
metadata = { path = "../metadata" }
nohash-hasher = "0.2.0"
now = "0.1"
num = "0.4.0"
num-traits = { version = "0.2.15", features = ["i128"] }
object_store = "0.6.1"
paste = "1.0.12"
rust_decimal = { version = "1.27.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.27"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
storage = { path = "../storage" }
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
] }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-subscriber = "0.3"
tracing-test = { version = "0.2.3", features = ["no-env-filter"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[dev-dependencies]
#criterion = { version = "0.3.5", features = ["html_reports"] }
rand = "0.8.5"
