[package]
name = "sources"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
chrono = "0.4.31"
http-serde = "1.1.3"
hyper = "0.14.27"
metadata = { path = "../metadata/"}
serde = { version = "1.0.188", features = ["derive"] }
ingester = { path = "../ingester/"}

[dev-dependencies]
async-trait = "0.1.73"
lazy_static = "1.4.0"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros"] }
uuid = "1.4.1"
