[package]
name = "storage"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]
[profile.test]
#lto = "fat"
#codegen-units = 1
opt-level = 3

[dependencies]
vfs =  { version = "0.10.0", features = ["embedded-fs"] }
bumpalo = { version = "3", features = ["allocator_api", "collections"] }
get-size = { version = "^0.1", features = ["derive"] }
rand = "0.8.4"
anyhow = "1.0.66"
fail = "0.5.1"
shuffle = "0.1.7"
arrow = { version = "49.0.0", features = ["ffi"] }
arrow-array = "49.0.0"
arrow-buffer = "49.0.0"
arrow-data = { version = "49.0.0", features = ["ffi"] }
arrow-schema = { version = "49.0.0" }
#parquet2 = { path = "../../../parquet2" }
#arrow2 = { path = "../../../arrow2", features = ["io_print", "io_parquet", "io_csv", "io_json", "compute_arithmetics", "compute_merge_sort", "compute_concatenate"] }
arrow2 = { git = "ssh://git@github.com/optiprism-io/arrow2.git", features = ["compute_cast", "io_print", "io_parquet", "io_csv", "io_json", "compute_arithmetics", "compute_merge_sort", "compute_sort", "compute_concatenate", "serde_types"] }
bitmaps = "3.2.0"
bytes = "1.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
#num-traits = "0.2.15"
siphasher = { version = "1", features = ["serde"] }
common = { path = "../common" }
#test-log = "0.2.11"
env_logger = "*"
fallible-streaming-iterator = "0.1.9"
futures = "0.3.25"
parking_lot = { version = "0.12.1" }
metrics-util = "0.16.0"
metrics = "0.22.0"
num-traits = "0.2.15"
ordered-float = "3.4.0"
parquet2 = { git = "ssh://git@github.com/optiprism-io/parquet2.git" }
rayon = "1.6.1"
# arrow = "33.0.0"
# arrow-array = "33.0.0"
rust_decimal = { version = "1.27.0", features = ["serde-with-float"] }
rust_decimal_macros = "1.27"
parquet = "49.0.0"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tracing-test = "0.2.4"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.149", features = ["derive"] }
bincode = "1.3.3"
crossbeam-skiplist = "0.1.1"
crc32fast = "1.3.2"
log = "0.4.20"
lazy_static = "1.4.0"
tokio = { version = "1.23.0", features = ["full"] }
scan_dir = "0.3.3"
tempfile = "3.8.0"

[dev-dependencies]
rstest = "0.18.1"
