[package]
name = "store"
version = "0.1.0"
edition = "2021"
authors = ["Optiprism <dev@optiprism.io>"]

[profile.test]
#lto = "fat"
#codegen-units = 1
opt-level = 3

[dependencies]
anyhow = "1.0.66"
arrow = { version = "38.0.0", features = ["ffi"] }
arrow-array = "38.0.0"
arrow-buffer = "38.0.0"
arrow-data = { version = "38.0.0", features = ["ffi"] }
arrow-schema = { version = "38.0.0" }
#parquet2 = { path = "../../../parquet2" }
#arrow2 = { path = "../../../arrow2", features = ["io_print", "io_parquet", "io_csv", "io_json", "compute_arithmetics", "compute_merge_sort", "compute_concatenate"] }
arrow2 = { git = "ssh://git@github.com/optiprism-io/arrow2.git", features = ["io_print", "io_parquet", "io_csv", "io_json", "compute_arithmetics", "compute_merge_sort", "compute_concatenate"] }
bincode = { version = "2.0.0-rc.3" } 
bitmaps = "3.2.0"
bytes = "1.3.0"
# arrow = "33.0.0"
# arrow-array = "33.0.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = { version = "0.99.17", features = ["display", "from_str"]}
#test-log = "0.2.11"
env_logger = "*"
fallible-streaming-iterator = "0.1.9"
futures = "0.3.25"
num-traits = "0.2.15"
okaywal = "0.2.0"
ordered-float = "3.4.0"
parquet2 = { git = "ssh://git@github.com/optiprism-io/parquet2.git" }
rand = "0.8.5"
rayon = "1.6.1"
serde = { version = "1.0.179", default-features = false, features = ["derive"] }
skiplist = "0.5.1"
#parquet = "33.0.0"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tracing-test = "0.2.4"
uuid = { version = "1.4.1", features = ["v1"]}

[dev-dependencies]
rstest = "0.17.0"
