[package]
name = "test_util"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = [] }
arrow = { version = "42.0.0", features = ["prettyprint"] }
metadata = { path = "../metadata" }
common = { path = "../common" }
store = { path = "../store" }
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }